# cockpit

./: .claudeignore  .clauderc.json  .env.example  .env.production.example  .env.production.new  .env.vercel.production  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .eslintrc.refactor.json  .eslintrc.tailwind-ban.json  .gitignore  .secret-rotation-completed.txt  .vercelignore  ACCESSIBILITY_COMPLIANCE.md  ACCESS_CODE_DELIVERY.md  ACCESS_CODE_FLOW.txt  ADMIN_LOGIN_BUG_FIX.md  ANTD_COMPARISON.md  APPLE_UX_IMPLEMENTATION_PLAN.md  ARCHITECTURE_IMPLEMENTATION_ROADMAP.md  ARCHITECTURE_INTEGRATION_STRATEGY.md  ARCHITECTURE_INTEGRATION_SUMMARY.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_UX_ASSESSMENT.md  ARCHITECTURE_V3_COMPLETE_ANALYSIS.md  ARCHITECTURE_V3_COMPLETE_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_V3_FINAL_BRUTAL_ASSESSMENT.md  ARCHITECTURE_V3_P0_IMPLEMENTATION_PLAN.md  ARCHITECTURE_V3_QUICK_START.md  ARCHITECTURE_V3_README.md  ARCHITECTURE_V3_REAL_TEST_RESULTS.md  ARCHITECTURE_V3_REMEDIATION_PLAN.md  ARCHITECTURE_V3_SESSION_1_PROGRESS.md  ARCHITECTURE_V3_START_HERE.md  ARCHITECTURE_V3_STEVE_JOBS_ASSESSMENT.md  ARCHITECTURE_V3_VISUAL_SUMMARY.md  AUTH_FIXES_COMPLETE.md  AUTOMATED_QUALITY_ANALYSIS.md  (+263 more)
.audit/: .eslintrc.js  .eslintrc.json  audit-pack.md  ci.tgz  depcheck.txt  git-log.txt  git-ls-files.txt  git-status.txt  knip.txt  next.config.js  npm-audit.json  prompt_repo_audit.md  ts-prune.txt  tsconfig.json
.claude/: settings.local.json
.husky/: pre-push
rust-formula-engine/: Cargo.toml  README.md  build.sh
rust-formula-engine/src/: lib.rs
(+1380 files in other folders)
