[package]
name = "cockpit-formula-engine"
version = "0.1.0"
edition = "2021"
authors = ["Cockpit Team"]
description = "High-performance formula engine for SAP project estimation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
# Optimize for small code size and speed
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
